# mi-slicer-eligibility-kit

./: .gitignore  Makefile  README.md  netlify.toml
.github/workflows/: ci.yml
application/: before-you-submit.md  sample-ai-evaluation-tasks.md  survey-prep.md
data/: README.md
docker/: Dockerfile
extensions/MedAssetPipeline/: CMakeLists.txt
extensions/MedAssetPipeline/MedAssetPipeline/: CMakeLists.txt  MedAssetPipeline.py
extensions/MedAssetPipeline/MedAssetPipeline/MedAssetPipelineLib/: MedAssetPipelineLogic.py  MedAssetPipelineWidget.py  __init__.py
extensions/MedAssetPipeline/MedAssetPipeline/Resources/Icons/: .gitkeep
pipeline/: Makefile  README.md  pyproject.toml
pipeline/configs/: dataset.yaml
pipeline/medasset/: __init__.py  cli.py  deidentify.py  export_dicom_seg.py  figures.py  infer.py  ingest.py  io.py  metrics.py  provenance.py  qc.py  synthetic.py
pipeline/tests/: test_pipeline.py
portfolio/: index.html
portfolio/assets/: README.md  qc-report.json  sample-spleen.dcm  segmentation-metrics.json
portfolio/css/: style.css
portfolio/js/: main.js
projects/: 01-dicom-ingest-qc.md  02-segment-editor.md  03-ai-correction-loop.md  04-dicom-seg-export.md  05-slicer-extension.md
scripts/: check-portfolio.sh  download-sample-data.sh  generate-demo-assets.py  sync-readme-images.sh
workflows/: 01-dicom-ingest-qc-workflow.md  02-segment-editor-workflow.md  03-ai-correction-loop-workflow.md  04-dicom-seg-export-workflow.md  05-slicer-extension-workflow.md  _slicer-workflow-template.md
